压力接口更改